bug fix - squashed

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,7 +17,7 @@
  
  body {
      margin: 20px;
-     background-image: url("http://i.imgur.com/sRyeLqp.jpg");
+     // background-image: url("http://i.imgur.com/sRyeLqp.jpg");
     //  background-image: url("baseball-player-pitcher-ball-163487_dark");
     
     /* Center and scale the image nicely */
